--- a/projets-4.html
+++ b/projets-4.html
@@ -240,8 +240,8 @@
 <br>16:00-17:00 Visite du campus 
 <br>
 <br><strong>02.06.2022
-</strong><br>10:00-11:00 Visite du Laboratoire pour les jeunes «&nbsp;Sources d'énergie nouvelles et renouvelables&nbsp;»
-<br>11:00-12:00 Visite du Laboratoire pour les jeunes «&nbsp;Nouveaux matériaux composites et fonctionnels aux propriétés particulières&nbsp;»
+</strong><br>10:00-11:00 Visite du Laboratoire des jeunes «&nbsp;Sources d'énergie nouvelles et renouvelables&nbsp;»
+<br>11:00-12:00 Visite du Laboratoire des jeunes «&nbsp;Nouveaux matériaux composites et fonctionnels aux propriétés particulières&nbsp;»
 <br>12:00-14:00 Déjeuner
 <br>14:00-15:00 Visite du Centre de recherches «&nbsp;Nanotechnologies et nouveaux matériaux&nbsp;»
 <br>
@@ -294,7 +294,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="y/Lv2f5NpZJ1cC8WLItb5DHm6/UAW5DW5gbudyTn8QF5stINbgxFVwOM5t7PbKyN9n7q6a5oPYlJbK87SUwGGt17WTIGLLX3YqoK53gvG1udbGT+4Dq9ECBL6sKilPeh">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="J9tAeR43qzWql13EOtM6fENus0QcIv+EQFEYQlPuHnzHNUdlG+G9kN2veRFM8xtm0+ZJvDalcLn8BlDkCsBzS9Ik7FBCtEMLWWjXG6iqw9lEXTbA78t9iUd5K0PamCXs">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
