--- a/ru/bonneu.html
+++ b/ru/bonneu.html
@@ -167,7 +167,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="WXnYlj4zP+Xf9/rjSH8IGihZZD9BRjTKBTi4KF8To1+tjEg8pFbrJAqKx7YJQJkpvLCV0Y1ScD6hPzgU3yjbve41JAztftXuEQ1HqZmSJ4IMOJ1YopC9vN9rcKArPj7b">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="wuUoF3LxbLLttjNEq1A4O5s3WfUxVlTW2Ytv2iLk8/obUgyoz8FtmojcUPZ2MujX9AWq/3of/4OGqAju5TkZtYJF+cqJakYEsbNyu/syh8atHCCIP3DlrCES9ICYFIOi">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -222,7 +222,7 @@
                     Если Вам интересно сотрудничество с Франко-русским институтом ЮРГПУ (НПИ), у Вас есть идея или проект, либо Вы ещё точно не знаете область потенциального взаимодействия и хотели бы это обсудить, всегда будем рады Вашим письмам.</p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCZI5F_k6S1k46ujh0SNrapM89f7mJxd30&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6">
                 <div class="social-list align-left">
