--- a/ru/projet-4.html
+++ b/ru/projet-4.html
@@ -294,7 +294,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="QUEyazth/lDxH2Vf3gVouliQi0CczTAplhy6fwhtebYfH4l1xHHRfFdFG5CsR5cxdHEoIBBz6If1zw6c7MLNE8qdYuPDx5FZtY+aJVXZ+H+LlMsKoSrhWenWXDbjW5Gg">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="BZID40jCiz8oayMJcXZLDJHa5mzYa1nmC+zefQoO67SdBCsUu958qPjxN93kjYwyDFAJO4g7ue4wZZ3MCqLTjQU//yP8VbcmTzs1ZeDAxBDeF2LizD6CZAePvI7sZn3a">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -349,7 +349,7 @@
                     Если Вам интересно сотрудничество с Франко-русским институтом ЮРГПУ (НПИ), у Вас есть идея или проект, либо Вы ещё точно не знаете область потенциального взаимодействия и хотели бы это обсудить, всегда будем рады Вашим письмам.</p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2699.748344128135!2d40.08407951562394!3d47.416849579172535!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40e2494cf3ce3995%3A0x9bd7e7b7d1d69264!2suniversit%C3%A9%20technique%20d'%C3%89tat%20de%20Novotcherkassk!5e0!3m2!1sfr!2sru!4v1653055084038!5m2!1sfr!2sru" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDk89J4FSunMF33ruMVWJaJht_Ro0kvoXs&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6">
                 <div class="social-list align-left">
