--- a/ru/annonces-2.html
+++ b/ru/annonces-2.html
@@ -190,7 +190,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="GCbvBspnwKG9VgJdq+iGr3wzcKNOSDBEHl/T5cdZeQVTFP6ptiwJ8XfkAjPT5awf43fFmC258Ld5bgKr0Z4GsgcBJZu8shj29G0rLjCdhSSzBYTLt0xJ+fNVb12GOjR2">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="d5n4ok/6BxAS0gotTxpgtSksOSfhrTtw+vOx5M9K/hmqzcyEPaqWjai4/Qckhqtklo1XZ13i2H9eZ2gAFx5nufdfY6mjX1isF+Bl+G1/8rzvXf9bpyqk6v11TZe2kYvS">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -245,7 +245,7 @@
                     Если Вам интересно сотрудничество с Франко-русским институтом ЮРГПУ (НПИ), у Вас есть идея или проект, либо Вы ещё точно не знаете область потенциального взаимодействия и хотели бы это обсудить, всегда будем рады Вашим письмам.</p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCZI5F_k6S1k46ujh0SNrapM89f7mJxd30&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6">
                 <div class="social-list align-left">
