--- a/ru/annonces-3.html
+++ b/ru/annonces-3.html
@@ -193,7 +193,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="FEwG09FqZM8KdNfmMxMeSxjc7bnnjEY+74ZBRobjFrIyDK4oPUyUYA+5ExMk4UuLYJ8Alpbf4D8Pa9rfvhPwmkCJUM3Kf5J3+jgrDTtJOsHYUUvW0AzQU7qWoJuJ8VZ3">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="yIXJBYEJk5rZJB7lCeCrPh8dFX0jebLZ0So8VLUTt21VVPvT6WmxeOzwAXaMQFEISxvphboCAuiSIeiUhSjjojzO07mJSPl+eCAH/NKcS592aZTX1lL/20Tpexr65XqI">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -248,7 +248,7 @@
                     Если Вам интересно сотрудничество с Франко-русским институтом ЮРГПУ (НПИ), у Вас есть идея или проект, либо Вы ещё точно не знаете область потенциального взаимодействия и хотели бы это обсудить, всегда будем рады Вашим письмам.</p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDk89J4FSunMF33ruMVWJaJht_Ro0kvoXs&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6">
                 <div class="social-list align-left">
