--- a/ru/annonces-4.html
+++ b/ru/annonces-4.html
@@ -174,7 +174,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="wUJdexPvfbqGZ0Sih033xzleRREr3GwSphCCJUFjl5u/P6KWctB2SexhGzLxgAOnzkTNKwKPWQIjwSxaiGa1HElCkwnBoOtTIedVMbX2v2zburwYxojhgq180s3jZUjq">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="MRg9A6gYySsZxnZH2o1fXosw88bNcZB6bhwuYkt5Bl5Km/QBYdiWGjZh7ldBPKvxGxGRDn+AOZe0tn3j73Ccis3Dvl/T9LT0gJQUpXPuUOsiwisk0PlM+pymf+BRKtjI">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -229,7 +229,7 @@
                     Если Вам интересно сотрудничество с Франко-русским институтом ЮРГПУ (НПИ), у Вас есть идея или проект, либо Вы ещё точно не знаете область потенциального взаимодействия и хотели бы это обсудить, всегда будем рады Вашим письмам.</p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCZI5F_k6S1k46ujh0SNrapM89f7mJxd30&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6">
                 <div class="social-list align-left">
