--- a/ru/annonces-5.html
+++ b/ru/annonces-5.html
@@ -159,7 +159,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="UF5XZoYc5iy+Nm8heVdKmFp4OX7D0e6JLQh+HTXAeIwr9ptFuJ6llsLGK3JS3IxFS8Cu8Pg06Pgn6W/djiij2NXlZvL0aM+KuCsDXO9yyqUjp4EN1J7yS3ROLz5GahiX">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="Xa9oktBbOn4jUevKpwdCJSR9GnmxxR7CL3zWg7i+NrUvd95QMeEoXKo4AiF57bfWnaar01pNc8NRCNMDFuY9z2sE4ykWqQBy1wOdy/y6rUlC798OO2ay83OUwmgS9sDf">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -214,7 +214,7 @@
                     Если Вам интересно сотрудничество с Франко-русским институтом ЮРГПУ (НПИ), у Вас есть идея или проект, либо Вы ещё точно не знаете область потенциального взаимодействия и хотели бы это обсудить, всегда будем рады Вашим письмам.</p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCNveGQ9bfpKFwWzQLLftrR9hNiHwdqQG8&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6">
                 <div class="social-list align-left">
