--- a/ru/annonces.html
+++ b/ru/annonces.html
@@ -285,7 +285,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="PO3kOeUCjyTvwHrOa0eI13b5VZ8YxEibHeZU5WWInsvQvtiXDsTqDwGkHPRivT25xVaz29/FZrHyEAUW1K9RbyqmUg5WwtmCG5lhfsfKQ5cAoJKZioKyDk/Hka00w581">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="6+/L7ezrZudQH+zB8Ljd9tBBBH30B6SliF8EJw56H7GA4V3Tw03vw707tCtA1FJlW7IkCbQjx+w+CJfK8wxxtqn21WznOSoCRujWuoDJps0kmZ3Eo0nBT3aHYgVaL4md">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -340,7 +340,7 @@
                     Если Вам интересно сотрудничество с Франко-русским институтом ЮРГПУ (НПИ), у Вас есть идея или проект, либо Вы ещё точно не знаете область потенциального взаимодействия и хотели бы это обсудить, всегда будем рады Вашим письмам.</p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDk89J4FSunMF33ruMVWJaJht_Ro0kvoXs&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6">
                 <div class="social-list align-left">
