--- a/ru/experts.html
+++ b/ru/experts.html
@@ -501,7 +501,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="Sk3kKo3qsvmP6sZsWkrHbNOj9GDWcl8ABLwJIjDhFuGHCh0UoPpzYAkbvC9q1P7uIaD9U+0n+ILTtLfXI4D3I8LtTnzc15QC63e2dNVzhc07v1XMhUfyFqhSaweK6jaE">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="yrDvq59ligRVngR5ki2BhKfcuBnu98RA982z02p+Ko77uePMbGH+8o0PnnrCHe3mUcur0XYL3h+R33DD4CYz3Pjv/pyv8vHswiIW3bXhZKkj6EKGsDig3XX2YPdQCHNI">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -556,7 +556,7 @@
                     Если Вам интересно сотрудничество с Франко-русским институтом ЮРГПУ (НПИ), у Вас есть идея или проект, либо Вы ещё точно не знаете область потенциального взаимодействия и хотели бы это обсудить, всегда будем рады Вашим письмам.</p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCNveGQ9bfpKFwWzQLLftrR9hNiHwdqQG8&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6">
                 <div class="social-list align-left">
