--- a/ru/ovtchinnnikov.html
+++ b/ru/ovtchinnnikov.html
@@ -170,7 +170,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="0EbdiCbsZI7BfQ2GE4/X2oblDpIgpjii+9HpnJZezVMA7T4sVQmvZlZxRcn+LEXs7p+rBBkKgn5WAqrbxSCkzb+fdwBeaKGm/QwV8nD9QvfviJSMHaZ89afgkf4mkmmG">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="zxUWCl9y9d0ChAlC3P3wYBdFglrtALWBrv/j4k8OowOKaNrz1iVyETn9okH7DiqBN25T9KdNce+/8QCNcM88qSTBilat2zj4i6sflCelTpnE64DNUrDCxn3amWhQ/RWu">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -225,7 +225,7 @@
                     Если Вам интересно сотрудничество с Франко-русским институтом ЮРГПУ (НПИ), у Вас есть идея или проект, либо Вы ещё точно не знаете область потенциального взаимодействия и хотели бы это обсудить, всегда будем рады Вашим письмам.</p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCNveGQ9bfpKFwWzQLLftrR9hNiHwdqQG8&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6">
                 <div class="social-list align-left">
