--- a/ru/projets-5.html
+++ b/ru/projets-5.html
@@ -194,7 +194,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="QkPtfj3Obp2p3s00ZzCxNlJKMkSUXbgwSKzMSmPgNF0iPeLeeDzt3q7Kk4ctcpV1y5ArW5jNIOpLf4/nqlPD6QKcWN8z1MZD5DGM8tuqahSY4sBW5JfHwI9GVoe7UTgV">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="ZbS4Pq3ZGYYRVAHhitF4iopGSV53YpjLRwQBOe9tEA3wN9ZrOA+MOSy+Ie1+xu/OKM1DJdEzmUcEmG8di1P8mToECZUqT8r16leKQJB+d4RpbwQHOJgl3qPYHl/P8DFx">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -249,7 +249,7 @@
                     Если Вам интересно сотрудничество с Франко-русским институтом ЮРГПУ (НПИ), у Вас есть идея или проект, либо Вы ещё точно не знаете область потенциального взаимодействия и хотели бы это обсудить, всегда будем рады Вашим письмам.</p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCZI5F_k6S1k46ujh0SNrapM89f7mJxd30&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6">
                 <div class="social-list align-left">
