--- a/ru/projets-n.html
+++ b/ru/projets-n.html
@@ -356,7 +356,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="YX5LJ7ZO/QH8rU5xfJqp6C+RHtK+V3C0sCedgo1mVxVIsIMLjD8gtBQ61tK5bWPQiwFPNzV2zrt3Da8gxq2yt67LG8f7TGn6ynsMK+PUmGWO6zXmTWKrC9ssyu1YgT1P">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="TGyOixhFSDe3hXmY11RQJzfZGs6BB/JlpQO3kM3L3FCurzD6vz0myq2sjxuVLcFfVBxZKFuW6whZrT3izWQ9TIIU0wCTRiIMiFghfWd35iP2405cEYI09xelgSk+63cT">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -411,7 +411,7 @@
                     Если Вам интересно сотрудничество с Франко-русским институтом ЮРГПУ (НПИ), у Вас есть идея или проект, либо Вы ещё точно не знаете область потенциального взаимодействия и хотели бы это обсудить, всегда будем рады Вашим письмам.</p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCNveGQ9bfpKFwWzQLLftrR9hNiHwdqQG8&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6">
                 <div class="social-list align-left">
