--- a/ru/teissier.html
+++ b/ru/teissier.html
@@ -163,7 +163,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="ialHMY6Q6RoMp2Ept7rh+dNHj41DtDG/7LvIfs3o16a81mt5ePjNi8oeiMyXYtfPZo+m8iJNf7y5HGJbcHxoSHj6jeRNk9TimwLrvMKVkVzW3Q79f+PgJ0TMs4cdp1JH">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="LaCyYgTMt8HFWMR4yqQS6/TnJ6430gWJgLtER8DiJTO7axg1FnSquUH40zhzgnlTXkh75K2Sc1itTlm8T4g9T3U6AGnN7kXcFN4DnNbkrrgyKuAFbLzvNI8emsDfffZ7">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -218,7 +218,7 @@
                     Если Вам интересно сотрудничество с Франко-русским институтом ЮРГПУ (НПИ), у Вас есть идея или проект, либо Вы ещё точно не знаете область потенциального взаимодействия и хотели бы это обсудить, всегда будем рады Вашим письмам.</p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDk89J4FSunMF33ruMVWJaJht_Ro0kvoXs&amp;q=Ulitsa Prosveshcheniya, 132, Novocherkassk, Rostov Oblast, 346428" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6">
                 <div class="social-list align-left">
