--- a/actualites-13.html
+++ b/actualites-13.html
@@ -130,7 +130,7 @@
         
         <div class="row justify-content-center mt-4">
             <div class="col-12 col-md-10 video-block">
-                <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/C0thF0wmODA?rel=0&amp;amp;mute=1&amp;showinfo=0&amp;autoplay=0&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+                <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://rutube.ru/video/d6630bc1f420a9921784a0aa19ac2b24/ ?loop=0&amp;autoplay=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
                 
             </div>
         </div>
@@ -145,7 +145,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="L3mgqpKW+ozP0+GX2pMNQTQBzBk5aTGfLVis5ty+Vw3WA5avRGRHKNieI4HZPIBBIjb8wK3j2JUmWpWLl//3K5Ud8EShV2UfMcKdOOM/wadqtCG4iTFm0htxh0L3C1WK">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="FCVuhC7AxGB0QcIGeD5Y5Wwrrwr50NGuEpd0VjYhVQ0HBH43AwReJyJuAtuz2IMhcJQMyLddrCC3TDdRemhBgW4Jn95kegN4H+vUlCjAkDyFG9sq7glu1T+9FjRObGGf">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
