--- a/actualites.html
+++ b/actualites.html
@@ -123,7 +123,7 @@
                 </div>
                 <div class="col-12 col-lg">
                     <div class="text-wrapper">
-                        <h6 class="card-title mbr-fonts-style display-2"><strong>Joël LaBruyère parle de… La russophobie : les causes et les effets</strong></h6>
+                        <h6 class="card-title mbr-fonts-style display-2"><strong>Joël LaBruyère parle de… La russophobie : les causes profondes</strong></h6>
                         
                         <div class="mbr-section-btn mt-3"><a class="btn btn-secondary display-4" href="actualites-13.html" target="_blank">LIRE</a></div>
                     </div>
@@ -429,7 +429,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="w+6jUYXU3O5+ncW/tv2CIR0DSmqTt4h8DrbKHtxk/ARgpcycRhNVnfGCXs4PlDR2S1HqZ8uocpBgX/QYnVdrdZzmyVYckHL/Yvy6As+k8p5ETZk0vUATECR2IA0jr58Q">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="gBti2EsexMpp357a34u1L4KFwz+PN8lJfTQVQj8mSBRMXTi5vffJ89tUt1GO23/x7Bz63MHBNFR4g5QayQc68/YJtmVHVE9a73AR2zbtD4k8shQNG73SARTiPrwqz8mN">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
