--- a/dumas.html
+++ b/dumas.html
@@ -141,7 +141,7 @@ François GARIJO a travaillé pour les plus grands groupes français, allemands 
                         <div class="card-box">
                             
                             
-                            <p class="mbr-text mbr-fonts-style display-7">Thierry Dumas est un ancien journaliste, animateur et producteur radio, réalisateur de reportages et de clips vidéos, musicien et producteur. «&nbsp;Brigandes – Entrez dans le clan&nbsp;» est son premier documentaire long format.<br>&nbsp;<br></p>
+                            <p class="mbr-text mbr-fonts-style display-7">Thierry Dumas est un ancien journaliste, animateur et producteur radio, réalisateur de reportages et de clips vidéos, musicien et producteur. <a href="actualites-12.html" class="text-secondary">«&nbsp;Brigandes – Entrez dans le clan&nbsp;»</a> est son premier documentaire long format.<br>&nbsp;<br></p>
                             <div class="social-row display-7">
                                 <div class="soc-item">
                                     <a href="https://h-act.fr" target="_blank">
@@ -171,7 +171,7 @@ François GARIJO a travaillé pour les plus grands groupes français, allemands 
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="PoX3BUKxUvrG7z3+VOvfQMni1yjjghnX6XtJVt9R8z2DIBAOl59NirqjkBld0TPfqc5gV6R6vrUSrQlt7DgAyRjg1z/kXSR/4n68MeUD2g4BnIcheUbtFVAzMvzVRwCs">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="JXRBbdDwVKo9hJeDvQ9N2/iMot8Sk9K0nl00XBeOXVzertea59LwqQXwkgTPVXht1tBJG3Qvi+Ys4MqsPz9GXzel3/YPbV9122WL/A/U922855JW7XNulUDUGZZCApNM">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
