--- a/ru/annonces-16.html
+++ b/ru/annonces-16.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html  >
 <head>
   
@@ -169,7 +169,7 @@
 <br>Приглашаются все желающие.
 <br> 
 <br><strong>Адрес: </strong>зал «Зинин», Точка кипения, Южно-Российский государственный политехнический университет (НПИ) имени М.И. Платова, 132, ул. Просвещения, г. Новочеркасск, Ростовская область. Вход с улицы Троицкой <a href="https://goo.gl/maps/WThSPa9MPY7kga697" class="text-primary" target="_blank">https://goo.gl/maps/WThSPa9MPY7kga697</a>.<br>
-<br><strong>Дата и время:</strong> 11 ноября 2022 г. в 15:00&nbsp;<br></p>
+<br><strong>Дата и время:</strong> 11 ноября 2022 г. в 15:00.<br></p>
             </div>
         </div>
     </div>
