--- a/projets-3.html
+++ b/projets-3.html
@@ -71,7 +71,7 @@
                             Partenaires</a><div class="dropdown-menu" aria-labelledby="dropdown-undefined"><a class="text-primary dropdown-item display-4" href="organisations.html">Organisations</a><a class="text-primary dropdown-item display-4" href="entreprises.html">Entreprises</a><a class="text-primary dropdown-item display-4" href="experts.html">Experts</a></div></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="actualites.html">
                             Actualités</a></li>
                     <li class="nav-item"><a class="nav-link link text-primary display-4" href="annonces.html">Annonces </a>
-                    </li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle text-primary display-4" href="https://mobiri.se" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="true">Projets </a><div class="dropdown-menu" aria-labelledby="dropdown-undefined"><a class="dropdown-item text-primary display-4" href="projetsencours.html">Projets en cours</a><a class="dropdown-item text-primary display-4" href="propositionsdeprojets.html">Propositions de projets</a><a class="dropdown-item text-primary display-4" href="anciensprojets.html">Anciens projets</a></div></li></ul>
+                    </li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-primary display-4" href="https://mobiri.se" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">Projets </a><div class="dropdown-menu" aria-labelledby="dropdown-undefined"><a class="dropdown-item text-primary display-4" href="projetsencours.html">Projets en cours</a><a class="dropdown-item text-primary display-4" href="propositionsdeprojets.html">Propositions de projets</a><a class="dropdown-item text-primary display-4" href="anciensprojets.html">Anciens projets</a></div></li></ul>
                 <div class="icons-menu">
                     <a class="iconfont-wrapper" href="https://www.facebook.com/ifrupesr" target="_blank">
                         <span class="p-2 mbr-iconfont socicon-facebook socicon"></span>
@@ -176,12 +176,12 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-md-12">
-                <div class="carousel slide" id="tmZ3M4qLPd" data-interval="5000" data-bs-interval="5000">
+                <div class="carousel slide" id="tmZrsYBMvT" data-interval="5000" data-bs-interval="5000">
                     
                     <ol class="carousel-indicators">
-                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#tmZ3M4qLPd" data-bs-target="#tmZ3M4qLPd"></li><li data-slide-to="1" data-bs-slide-to="1" class="" data-target="#tmZ3M4qLPd" data-bs-target="#tmZ3M4qLPd"></li>
-                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#tmZ3M4qLPd" data-bs-target="#tmZ3M4qLPd"></li>
-                        <li data-slide-to="3" data-bs-slide-to="3" data-target="#tmZ3M4qLPd" data-bs-target="#tmZ3M4qLPd"></li><li data-slide-to="4" data-bs-slide-to="4" data-target="#tmZ3M4qLPd" data-bs-target="#tmZ3M4qLPd"></li>
+                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#tmZrsYBMvT" data-bs-target="#tmZrsYBMvT"></li><li data-slide-to="1" data-bs-slide-to="1" class="" data-target="#tmZrsYBMvT" data-bs-target="#tmZrsYBMvT"></li>
+                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#tmZrsYBMvT" data-bs-target="#tmZrsYBMvT"></li>
+                        <li data-slide-to="3" data-bs-slide-to="3" data-target="#tmZrsYBMvT" data-bs-target="#tmZrsYBMvT"></li><li data-slide-to="4" data-bs-slide-to="4" data-target="#tmZrsYBMvT" data-bs-target="#tmZrsYBMvT"></li>
                     </ol>
                     <div class="carousel-inner">
                         
@@ -213,11 +213,11 @@
                             </div>
                         </div>
                     </div>
-                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#tmZ3M4qLPd">
+                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#tmZrsYBMvT">
                         <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Previous</span>
                     </a>
-                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#tmZ3M4qLPd">
+                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#tmZrsYBMvT">
                         <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Next</span>
                     </a>
@@ -235,7 +235,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="cX3G4FALNm5kiRyOM2NDSeL3yqk+WrEd/3DPEYQI8os8scOftmMS7dYb6VReek/KN/u3T+7oLI+VtU3I7FWERWT6xbNZY5DYqAkBMKKNUUyXG2XW3eMsZGw1v8/aikbc">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="x6YvJh8giuuu7jEIylRk5HvM6ubUYd4czNHyc11KxHETsbC3cj+oCBw8HMy+RZ/FLJDm2kL7Lwo4nrXEs5op+Gb4YL1oQ2BkBpjwqEHAhcJ017WhzatHBOukJ3cCTh2Y">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
