--- a/actualites-11.html
+++ b/actualites-11.html
@@ -73,7 +73,7 @@ Depuis 2020, les étudiants de notre Université et de l'école-partenaire parti
                             Partenaires</a><div class="dropdown-menu" aria-labelledby="dropdown-undefined"><a class="text-primary dropdown-item display-4" href="organisations.html">Organisations</a><a class="text-primary dropdown-item display-4" href="entreprises.html">Entreprises</a><a class="text-primary dropdown-item display-4" href="experts.html">Experts</a></div></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="actualites.html">
                             Actualités</a></li>
                     <li class="nav-item"><a class="nav-link link text-primary display-4" href="annonces.html">Annonces </a>
-                    </li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle text-primary display-4" href="https://mobiri.se" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="true">Projets </a><div class="dropdown-menu" aria-labelledby="dropdown-undefined"><a class="dropdown-item text-primary display-4" href="projetsencours.html">Projets en cours</a><a class="dropdown-item text-primary display-4" href="propositionsdeprojets.html">Propositions de projets</a><a class="dropdown-item text-primary display-4" href="anciensprojets.html">Anciens projets</a></div></li></ul>
+                    </li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-primary display-4" href="https://mobiri.se" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">Projets </a><div class="dropdown-menu" aria-labelledby="dropdown-undefined"><a class="dropdown-item text-primary display-4" href="projetsencours.html">Projets en cours</a><a class="dropdown-item text-primary display-4" href="propositionsdeprojets.html">Propositions de projets</a><a class="dropdown-item text-primary display-4" href="anciensprojets.html">Anciens projets</a></div></li></ul>
                 <div class="icons-menu">
                     <a class="iconfont-wrapper" href="https://www.facebook.com/ifrupesr" target="_blank">
                         <span class="p-2 mbr-iconfont socicon-facebook socicon"></span>
@@ -133,12 +133,12 @@ Depuis 2020, les étudiants de notre Université et de l'école-partenaire parti
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-md-12">
-                <div class="carousel slide" id="tmZ3QtoqJf" data-interval="5000" data-bs-interval="5000">
+                <div class="carousel slide" id="tmZrwZQjd4" data-interval="5000" data-bs-interval="5000">
                     
                     <ol class="carousel-indicators">
-                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#tmZ3QtoqJf" data-bs-target="#tmZ3QtoqJf"></li>
-                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#tmZ3QtoqJf" data-bs-target="#tmZ3QtoqJf"></li>
-                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#tmZ3QtoqJf" data-bs-target="#tmZ3QtoqJf"></li>
+                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#tmZrwZQjd4" data-bs-target="#tmZrwZQjd4"></li>
+                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#tmZrwZQjd4" data-bs-target="#tmZrwZQjd4"></li>
+                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#tmZrwZQjd4" data-bs-target="#tmZrwZQjd4"></li>
                     </ol>
                     <div class="carousel-inner">
                         
@@ -160,11 +160,11 @@ Depuis 2020, les étudiants de notre Université et de l'école-partenaire parti
                             </div>
                         </div>
                     </div>
-                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#tmZ3QtoqJf">
+                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#tmZrwZQjd4">
                         <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Previous</span>
                     </a>
-                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#tmZ3QtoqJf">
+                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#tmZrwZQjd4">
                         <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Next</span>
                     </a>
@@ -203,7 +203,7 @@ Depuis 2020, les étudiants de notre Université et de l'école-partenaire parti
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="kHJEZMI8qKcCmlddde1QlGiHEKa3kyXdqGuLMkH//25g+OW7ZDTziwKmoluDwWvjxld7ZQnTlZbfmz4qt2sn+VGN50l1Ao7IkxNSefkwOstz2bpSk0oFQw8AK9VAHjnT">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="gV5kSmiTRnSB3sOz4HJkwXL0zU6Y6XlD5lbsMYNFOSMSibNxl1zHlDAkDWFfRFh0H+iSP2JxQ/0btAs+gOo8TJy96QmCxUdMZDqEccxi/Plizr88zm/vUXhUff8EkT3L">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
