--- a/actualites-15.html
+++ b/actualites-15.html
@@ -71,7 +71,7 @@
                             Partenaires</a><div class="dropdown-menu" aria-labelledby="dropdown-undefined"><a class="text-primary dropdown-item display-4" href="organisations.html">Organisations</a><a class="text-primary dropdown-item display-4" href="entreprises.html">Entreprises</a><a class="text-primary dropdown-item display-4" href="experts.html">Experts</a></div></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="actualites.html">
                             Actualités</a></li>
                     <li class="nav-item"><a class="nav-link link text-primary display-4" href="annonces.html">Annonces </a>
-                    </li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle text-primary display-4" href="https://mobiri.se" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="true">Projets </a><div class="dropdown-menu" aria-labelledby="dropdown-undefined"><a class="dropdown-item text-primary display-4" href="projetsencours.html">Projets en cours</a><a class="dropdown-item text-primary display-4" href="propositionsdeprojets.html">Propositions de projets</a><a class="dropdown-item text-primary display-4" href="anciensprojets.html">Anciens projets</a></div></li></ul>
+                    </li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-primary display-4" href="https://mobiri.se" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">Projets </a><div class="dropdown-menu" aria-labelledby="dropdown-undefined"><a class="dropdown-item text-primary display-4" href="projetsencours.html">Projets en cours</a><a class="dropdown-item text-primary display-4" href="propositionsdeprojets.html">Propositions de projets</a><a class="dropdown-item text-primary display-4" href="anciensprojets.html">Anciens projets</a></div></li></ul>
                 <div class="icons-menu">
                     <a class="iconfont-wrapper" href="https://www.facebook.com/ifrupesr" target="_blank">
                         <span class="p-2 mbr-iconfont socicon-facebook socicon"></span>
@@ -164,11 +164,11 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-md-12">
-                <div class="carousel slide" id="tmZ3TFK1Ub" data-interval="5000" data-bs-interval="5000">
+                <div class="carousel slide" id="tmZrzZ7cCN" data-interval="5000" data-bs-interval="5000">
                     
                     <ol class="carousel-indicators">
-                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#tmZ3TFK1Ub" data-bs-target="#tmZ3TFK1Ub"></li>
-                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#tmZ3TFK1Ub" data-bs-target="#tmZ3TFK1Ub"></li><li data-slide-to="2" data-bs-slide-to="2" data-target="#tmZ3TFK1Ub" data-bs-target="#tmZ3TFK1Ub"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#tmZ3TFK1Ub" data-bs-target="#tmZ3TFK1Ub"></li><li data-slide-to="4" data-bs-slide-to="4" data-target="#tmZ3TFK1Ub" data-bs-target="#tmZ3TFK1Ub"></li><li data-slide-to="5" data-bs-slide-to="5" data-target="#tmZ3TFK1Ub" data-bs-target="#tmZ3TFK1Ub"></li><li data-slide-to="6" data-bs-slide-to="6" data-target="#tmZ3TFK1Ub" data-bs-target="#tmZ3TFK1Ub"></li>
+                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#tmZrzZ7cCN" data-bs-target="#tmZrzZ7cCN"></li>
+                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#tmZrzZ7cCN" data-bs-target="#tmZrzZ7cCN"></li><li data-slide-to="2" data-bs-slide-to="2" data-target="#tmZrzZ7cCN" data-bs-target="#tmZrzZ7cCN"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#tmZrzZ7cCN" data-bs-target="#tmZrzZ7cCN"></li><li data-slide-to="4" data-bs-slide-to="4" data-target="#tmZrzZ7cCN" data-bs-target="#tmZrzZ7cCN"></li><li data-slide-to="5" data-bs-slide-to="5" data-target="#tmZrzZ7cCN" data-bs-target="#tmZrzZ7cCN"></li><li data-slide-to="6" data-bs-slide-to="6" data-target="#tmZrzZ7cCN" data-bs-target="#tmZrzZ7cCN"></li>
                         
                     </ol>
                     <div class="carousel-inner">
@@ -211,11 +211,11 @@
                             </div>
                         </div>
                     </div>
-                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#tmZ3TFK1Ub">
+                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#tmZrzZ7cCN">
                         <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Previous</span>
                     </a>
-                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#tmZ3TFK1Ub">
+                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#tmZrzZ7cCN">
                         <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Next</span>
                     </a>
@@ -233,7 +233,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="KSp2z2g+0T4Ro7/xS1m/g/Q4yRzK3n7tpLoCHcJRmORZwsUEVbPjXFb+PxoBNT8v08f83ZIj+8B3Vp8hNWjDzbJfU6IVfw5loJsnIiwIFIryAkKyBpAbQPwPFGknwzqF">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="aTJ2IdhPxmuRTkReogCh8p6mrYuSCarSFPgMJFl8KseKyuRLnjjr5b3inXiNtt3Zqmje6updeQkFmRbKf02Cuvey2tAAxMeEEfHe7gCSHv+rSlBD339PYSRWvow6b34K">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
