--- a/actualites-6.html
+++ b/actualites-6.html
@@ -71,7 +71,7 @@
                             Partenaires</a><div class="dropdown-menu" aria-labelledby="dropdown-undefined"><a class="text-primary dropdown-item display-4" href="organisations.html">Organisations</a><a class="text-primary dropdown-item display-4" href="entreprises.html">Entreprises</a><a class="text-primary dropdown-item display-4" href="experts.html">Experts</a></div></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="actualites.html">
                             Actualités</a></li>
                     <li class="nav-item"><a class="nav-link link text-primary display-4" href="annonces.html">Annonces </a>
-                    </li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle text-primary display-4" href="https://mobiri.se" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="true">Projets </a><div class="dropdown-menu" aria-labelledby="dropdown-undefined"><a class="dropdown-item text-primary display-4" href="projetsencours.html">Projets en cours</a><a class="dropdown-item text-primary display-4" href="propositionsdeprojets.html">Propositions de projets</a><a class="dropdown-item text-primary display-4" href="anciensprojets.html">Anciens projets</a></div></li></ul>
+                    </li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-primary display-4" href="https://mobiri.se" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">Projets </a><div class="dropdown-menu" aria-labelledby="dropdown-undefined"><a class="dropdown-item text-primary display-4" href="projetsencours.html">Projets en cours</a><a class="dropdown-item text-primary display-4" href="propositionsdeprojets.html">Propositions de projets</a><a class="dropdown-item text-primary display-4" href="anciensprojets.html">Anciens projets</a></div></li></ul>
                 <div class="icons-menu">
                     <a class="iconfont-wrapper" href="https://www.facebook.com/ifrupesr" target="_blank">
                         <span class="p-2 mbr-iconfont socicon-facebook socicon"></span>
@@ -131,12 +131,12 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-md-12">
-                <div class="carousel slide" id="tmZ3N15mYj" data-interval="5000" data-bs-interval="5000">
+                <div class="carousel slide" id="tmZrtMsfN5" data-interval="5000" data-bs-interval="5000">
                     
                     <ol class="carousel-indicators">
-                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#tmZ3N15mYj" data-bs-target="#tmZ3N15mYj"></li>
-                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#tmZ3N15mYj" data-bs-target="#tmZ3N15mYj"></li>
-                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#tmZ3N15mYj" data-bs-target="#tmZ3N15mYj"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#tmZ3N15mYj" data-bs-target="#tmZ3N15mYj"></li>
+                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#tmZrtMsfN5" data-bs-target="#tmZrtMsfN5"></li>
+                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#tmZrtMsfN5" data-bs-target="#tmZrtMsfN5"></li>
+                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#tmZrtMsfN5" data-bs-target="#tmZrtMsfN5"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#tmZrtMsfN5" data-bs-target="#tmZrtMsfN5"></li>
                     </ol>
                     <div class="carousel-inner">
                         
@@ -163,11 +163,11 @@
                             </div>
                         </div>
                     </div>
-                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#tmZ3N15mYj">
+                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#tmZrtMsfN5">
                         <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Previous</span>
                     </a>
-                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#tmZ3N15mYj">
+                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#tmZrtMsfN5">
                         <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Next</span>
                     </a>
@@ -199,7 +199,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="KLINtgLvQJ7DaL4Iv0nX/nk6dWv8l8920amfaarZ4T9Mb0EbEHvHOeDjBvYfMRg/UtWsF1MiaZeIyJXGoZmEiCODXQHzL0eWa07Ikfcn8CVu2+1tNrZCkjxmS3E0dLE8">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="Elg1+R6/2oTaOcZjWpwWC9Zqn2C4Ngakpv+IvbZBU/fXb5VYp5OnTh0/rbcRF2LRrWNQyg9IJ5n3U/nLd44eKAA4YlfKjv5y8chX/b/FIQBis4hXX0oD0yz93JUpfSjK">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
