--- a/actualites-7.html
+++ b/actualites-7.html
@@ -71,7 +71,7 @@
                             Partenaires</a><div class="dropdown-menu" aria-labelledby="dropdown-undefined"><a class="text-primary dropdown-item display-4" href="organisations.html">Organisations</a><a class="text-primary dropdown-item display-4" href="entreprises.html">Entreprises</a><a class="text-primary dropdown-item display-4" href="experts.html">Experts</a></div></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="actualites.html">
                             Actualités</a></li>
                     <li class="nav-item"><a class="nav-link link text-primary display-4" href="annonces.html">Annonces </a>
-                    </li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle text-primary display-4" href="https://mobiri.se" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="true">Projets </a><div class="dropdown-menu" aria-labelledby="dropdown-undefined"><a class="dropdown-item text-primary display-4" href="projetsencours.html">Projets en cours</a><a class="dropdown-item text-primary display-4" href="propositionsdeprojets.html">Propositions de projets</a><a class="dropdown-item text-primary display-4" href="anciensprojets.html">Anciens projets</a></div></li></ul>
+                    </li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-primary display-4" href="https://mobiri.se" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">Projets </a><div class="dropdown-menu" aria-labelledby="dropdown-undefined"><a class="dropdown-item text-primary display-4" href="projetsencours.html">Projets en cours</a><a class="dropdown-item text-primary display-4" href="propositionsdeprojets.html">Propositions de projets</a><a class="dropdown-item text-primary display-4" href="anciensprojets.html">Anciens projets</a></div></li></ul>
                 <div class="icons-menu">
                     <a class="iconfont-wrapper" href="https://www.facebook.com/ifrupesr" target="_blank">
                         <span class="p-2 mbr-iconfont socicon-facebook socicon"></span>
@@ -131,12 +131,12 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-md-12">
-                <div class="carousel slide" id="tmZ3NjwKMi" data-interval="5000" data-bs-interval="5000">
+                <div class="carousel slide" id="tmZru3iTGX" data-interval="5000" data-bs-interval="5000">
                     
                     <ol class="carousel-indicators">
-                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#tmZ3NjwKMi" data-bs-target="#tmZ3NjwKMi"></li>
-                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#tmZ3NjwKMi" data-bs-target="#tmZ3NjwKMi"></li>
-                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#tmZ3NjwKMi" data-bs-target="#tmZ3NjwKMi"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#tmZ3NjwKMi" data-bs-target="#tmZ3NjwKMi"></li><li data-slide-to="4" data-bs-slide-to="4" data-target="#tmZ3NjwKMi" data-bs-target="#tmZ3NjwKMi"></li><li data-slide-to="5" data-bs-slide-to="5" data-target="#tmZ3NjwKMi" data-bs-target="#tmZ3NjwKMi"></li><li data-slide-to="6" data-bs-slide-to="6" data-target="#tmZ3NjwKMi" data-bs-target="#tmZ3NjwKMi"></li><li data-slide-to="7" data-bs-slide-to="7" data-target="#tmZ3NjwKMi" data-bs-target="#tmZ3NjwKMi"></li><li data-slide-to="8" data-bs-slide-to="8" data-target="#tmZ3NjwKMi" data-bs-target="#tmZ3NjwKMi"></li><li data-slide-to="9" data-bs-slide-to="9" data-target="#tmZ3NjwKMi" data-bs-target="#tmZ3NjwKMi"></li><li data-slide-to="10" data-bs-slide-to="10" data-target="#tmZ3NjwKMi" data-bs-target="#tmZ3NjwKMi"></li><li data-slide-to="11" data-bs-slide-to="11" data-target="#tmZ3NjwKMi" data-bs-target="#tmZ3NjwKMi"></li><li data-slide-to="12" data-bs-slide-to="12" data-target="#tmZ3NjwKMi" data-bs-target="#tmZ3NjwKMi"></li>
+                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#tmZru3iTGX" data-bs-target="#tmZru3iTGX"></li>
+                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#tmZru3iTGX" data-bs-target="#tmZru3iTGX"></li>
+                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#tmZru3iTGX" data-bs-target="#tmZru3iTGX"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#tmZru3iTGX" data-bs-target="#tmZru3iTGX"></li><li data-slide-to="4" data-bs-slide-to="4" data-target="#tmZru3iTGX" data-bs-target="#tmZru3iTGX"></li><li data-slide-to="5" data-bs-slide-to="5" data-target="#tmZru3iTGX" data-bs-target="#tmZru3iTGX"></li><li data-slide-to="6" data-bs-slide-to="6" data-target="#tmZru3iTGX" data-bs-target="#tmZru3iTGX"></li><li data-slide-to="7" data-bs-slide-to="7" data-target="#tmZru3iTGX" data-bs-target="#tmZru3iTGX"></li><li data-slide-to="8" data-bs-slide-to="8" data-target="#tmZru3iTGX" data-bs-target="#tmZru3iTGX"></li><li data-slide-to="9" data-bs-slide-to="9" data-target="#tmZru3iTGX" data-bs-target="#tmZru3iTGX"></li><li data-slide-to="10" data-bs-slide-to="10" data-target="#tmZru3iTGX" data-bs-target="#tmZru3iTGX"></li><li data-slide-to="11" data-bs-slide-to="11" data-target="#tmZru3iTGX" data-bs-target="#tmZru3iTGX"></li><li data-slide-to="12" data-bs-slide-to="12" data-target="#tmZru3iTGX" data-bs-target="#tmZru3iTGX"></li>
                     </ol>
                     <div class="carousel-inner">
                         
@@ -208,11 +208,11 @@
                             </div>
                         </div>
                     </div>
-                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#tmZ3NjwKMi">
+                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#tmZru3iTGX">
                         <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Previous</span>
                     </a>
-                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#tmZ3NjwKMi">
+                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#tmZru3iTGX">
                         <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Next</span>
                     </a>
@@ -253,7 +253,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="NECjOIFh+Vd/vsGjbc0dezOozfPFaybI2KQ3sX0PGgDkC1nsCQFH1xlfO9rte8iY+dlmuiqPtfzH3DmzjMh7qTM6V1sjVzN6Epm2u+BVuiCbFXPEV39j4u4gM+mQDck7">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="sa0glyM33CHNYf9rn1QRLhZ+4d1iffrRnOw3joJTkis6OahryqpphuRDSaRHUzxccwx4ZDhW5eUSsP283akYs+11/agSMK8HTaoS+YrllyrzTtRwBAHAJ/9CejyUrcpv">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
