--- a/annonces-16.html
+++ b/annonces-16.html
@@ -70,7 +70,7 @@
                             Partenaires</a><div class="dropdown-menu" aria-labelledby="dropdown-undefined"><a class="text-primary dropdown-item display-4" href="organisations.html">Organisations</a><a class="text-primary dropdown-item display-4" href="entreprises.html">Entreprises</a><a class="text-primary dropdown-item display-4" href="experts.html">Experts</a></div></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="actualites.html">
                             Actualités</a></li>
                     <li class="nav-item"><a class="nav-link link text-primary display-4" href="annonces.html">Annonces </a>
-                    </li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle text-primary display-4" href="https://mobiri.se" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="true">Projets </a><div class="dropdown-menu" aria-labelledby="dropdown-undefined"><a class="dropdown-item text-primary display-4" href="projetsencours.html">Projets en cours</a><a class="dropdown-item text-primary display-4" href="propositionsdeprojets.html">Propositions de projets</a><a class="dropdown-item text-primary display-4" href="anciensprojets.html">Anciens projets</a></div></li></ul>
+                    </li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-primary display-4" href="https://mobiri.se" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">Projets </a><div class="dropdown-menu" aria-labelledby="dropdown-undefined"><a class="dropdown-item text-primary display-4" href="projetsencours.html">Projets en cours</a><a class="dropdown-item text-primary display-4" href="propositionsdeprojets.html">Propositions de projets</a><a class="dropdown-item text-primary display-4" href="anciensprojets.html">Anciens projets</a></div></li></ul>
                 <div class="icons-menu">
                     <a class="iconfont-wrapper" href="https://www.facebook.com/ifrupesr" target="_blank">
                         <span class="p-2 mbr-iconfont socicon-facebook socicon"></span>
@@ -194,7 +194,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="RrVPL4qPwEqw3CJKf+lgcO737N1w9fI8KhmY1ySMmEa/PF9ylNpbj18Onnv4vF/AG5cwSOGfd+cBvJkaARE1QKboJR+qE2OOMfESoQsE2ZteLiFOjhUvri5VQlBhLJ+E">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="nxGU4yZm7l1vw6Jf5lbw4omyFasXjjOYggynOwzlaP6lLT9xfQWEalhrOL6xrI/AG1CkrfJvZebJhltkROSMowq7avtGiThK1U3MK5lHf7dB9whk8mHRMULb4XWOicFC">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
